[package]
name = "flash-md"
authors = ["Sebastian Kootz"]
version = "0.1.14"
edition = "2024"

readme = "README.md"
build = "build.rs"

[dependencies]
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
pulldown-cmark = "0.13.0"
rand = "0.9.1"

[package.metadata]
assets = ["resources/*"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = 'abort'

